Issue #SB-12493 fix:overlaping text after submit review

--- a/org.ekstep.questionunit-1.1/renderer/components/css/components.css
+++ b/org.ekstep.questionunit-1.1/renderer/components/css/components.css
@@ -1,6 +1,6 @@
 body {
     font-family: NotoSans, NotoSansOriya, NotoSansGujarati, NotoSansMalayalam;
-    line-height: 19px;
+    line-height: 1.6;
 }
 
 /* overiding katex css */
